# afi_uge

./: jobstat.py  wjobstat.py
Accounting_Statistics/: c_statistics.py  mk-new.sh
Accounting_Statistics/add_pkgs/: python-xmltodict-0.9.0-1.el7.noarch.rpm  python2-docopt-0.6.2-7.el7.noarch.rpm
Accounting_Statistics/etc/: g-20190409.list  g.l  group_exceeded_pm.txt  group_limit_pm.csv  group_limit_py.csv  group_out.201807  group_out.csv  group_used_pm.201807  group_used_pm.csv  grp.l  jc_out.csv  out.l  prj_exceeded_pm.txt  prj_limit_pm.201808  prj_limit_pm.201809  prj_limit_pm.201810  prj_limit_pm.201811  prj_limit_pm.201812  prj_limit_pm.201901  prj_limit_pm.201902  prj_limit_pm.201903  prj_limit_pm.201904  prj_limit_pm.csv  prj_limit_pm.csv-dist  prj_limit_pm.csv.20180802  prj_limit_pm.csv.20180802.1  prj_limit_pm.csv.20180802.2  prj_limit_pm.csv.20180802.3  prj_limit_pm.csv.20180802.4  prj_limit_pm.csv.20180907  prj_limit_pm.csv.20180913  prj_limit_pm.csv.20180914  prj_limit_pm.csv.20180918bak  prj_limit_pm.csv.20180925  prj_limit_pm.csv.20181002  prj_limit_pm.csv.20181004bak  prj_limit_pm.csv.20181022bak  prj_limit_pm.csv.20181030bak  prj_limit_pm.csv.20181101bak  prj_limit_pm.csv.20181106bak  (+46 more)
Accounting_Statistics/sbin/: a  actlist-group.py  actlist-prj.py  actlist-user.py  actlist.py  b.sh  c_pacct.py  (+50 more)
ifslib/: Mersenne_Twister_Home_Page.txt  a.out  grnd.f  sample_spme_all  sample_spme_all.f  sample_spme_all_sp.f  sample_spme_prmt.f  sample_spme_prmt_sp.f  test.f  tremain-dist.c  tremain.c
ifslib/KMATH_FFT3D-1.0/: INSTALL  LICENCE.txt  Makefile  Makefile.am  Makefile.in  README  auto.sh  conf.sh  config.h  config.status  configure  configure.ac  configure.scan  ffte  patch-ffte5.sh
ifslib/KMATH_FFT3D-1.0/autom4te.cache/: output.0  requests  traces.0  traces.1
ifslib/KMATH_FFT3D-1.0/bench/: Makefile  Makefile.am  Makefile.in  bench_km_fft3d  bench_km_fft3d.f  bench_km_fft3d_K.sh  bench_km_fft3d_K.sh.i5468682  bench_km_fft3d_K.sh.i5468692  bench_km_fft3d_K.sh.i5468700  bench_km_fft3d_K.sh.i5468872  bench_km_fft3d_K.sh.i5469278  bench_km_fft3d_K.sh.i5469295  bench_km_fft3d_K.sh.o5468692  bench_km_fft3d_K.sh.o5468700  bench_km_fft3d_K.sh.s5468682  bench_km_fft3d_K.sh.s5468692  bench_km_fft3d_K.sh.s5468700  bench_km_fft3d_K.sh.s5468872  bench_km_fft3d_K.sh.s5469278  bench_km_fft3d_K.sh.s5469295
ifslib/KMATH_FFT3D-1.0/src/: Makefile  Makefile.am  Makefile.in  ffte_factor.f  ffte_fft235.f  ffte_kernel.f  ffte_zfft1d.f  kmath_dft.F  kmath_dft_mod.mod  kmath_fft3d.F  kmath_fft3d_mod.mod  kmath_msg.F  kmath_msg_mod.mod  kmath_prop.F  kmath_time.F  kmath_time_mod.mod  kmath_transpose.F  kmath_transpose_mod.mod  param.h
lic/: ansys.license.log.20180629
lic_tools/: pwusr.sh
sample/: accounting  group.txt  qstat-F_slots-xml.txt  qstat-F_slots.txt  qstat-gc-20180719.xml  qstat-gc-ext.txt  qstat-r-20180608.txt  qstat-r-xml-20180608.txt  qstat-r-xml.txt  qstat-r.txt  qstat-ru-20180719.xml  qstat-sp-ext.txt  qstat-sp-ext.xml  qstat-sp-nojobs.xml  qstat-sp.txt  qstat-sp.xml  tmp.qstat_gc_ext_xml.VD1fN  tmp.qstat_r_xml.1NCCH  user.txt  wqstat.out
(+262 files in other folders)
